HREPTWO-4190 - IE7: Layout bug search result  - Fixed layout differences for column headers of listings  - Fixed IE issue with toggle-button  - Fixed scrollbar issue in image-picker-thumbnail-view with IE7  - Added specific IE7 stylesheet  - Added upgrade module code for new IE7 stylesheet
svn path=/hippo-ecm/trunk/; revision=23261

--- a/repository/addon/cms/browse/src/main/java/org/hippoecm/frontend/plugins/cms/browse/list/DocumentListingPlugin.css
+++ b/repository/addon/cms/browse/src/main/java/org/hippoecm/frontend/plugins/cms/browse/list/DocumentListingPlugin.css
@@ -14,14 +14,6 @@
  * limitations under the License.
  */
 
-.toggle-button {
-    float: right;
-    margin-bottom: 3px;
-    padding-top: 2px;
-    padding-right: 2px;
-    position: static;
-}
-
 .doclisting-icon { width:15px; }
 
 .doclisting-state { width: 40px; }
