--- a/repository/package/skin/src/main/webapp/screen.css
+++ b/repository/package/skin/src/main/webapp/screen.css
@@ -243,8 +243,9 @@ padding-right: 9px;
 .hippo-list-details tr td.icon-16 {height: 16px; width: 16px; padding: 0px;}
 .hippo-list-details tr td.icon-16 span{display:block; height: 16px; width: 16px; margin-left: 2px;}
 .hippo-list-details tr td.icon-16 span{background-repeat: no-repeat; background-position: center center;}
-.hippo-list-details tr th{padding: 1px; padding-left: 4px; padding-bottom: 1px; border-left: 1px solid #afafaf; background: url("images/hippo-list-details-th-back.png") repeat-x;}
-.hippo-list-details tr th span{padding-left: 3px; padding-right: 3px;}
+.hippo-list-details tr th{padding: 0px; padding-left: 4px; border-left: 1px solid #afafaf; border-bottom: 1px solid #afafaf; background: url("images/hippo-list-details-th-back.png") repeat-x;}
+
+.hippo-list-details tr th span{padding: 1px; padding-left: 3px; padding-right: 3px; display:block;}
 .hippo-list-details tr td{border-bottom: 1px solid #f4f4f4; padding: 4px 2px 5px 4px; border-right: none;}
 .hippo-list-details tr td:hover{cursor: pointer}
 .hippo-list-details th {cursor: pointer}
@@ -255,6 +256,13 @@ padding-right: 9px;
 .hippo-list-details .hippo-list-order-ascending{background: url('images/icons/arrow-sort-down-16.png') center right no-repeat; padding-right: 20px;}
 .hippo-list-details .hippo-list-order-descending {background: url('images/icons/arrow-sort-up-16.png') center right no-repeat; padding-right: 20px;}
 .hippo-list-details .hippo-list-order-none{}
+
+.hippo-typeslist,  .asset-gallery-plugin, .hippo-list-search {
+  margin-top: 25px;
+}
+.hippo-picker-list-details .hippo-typeslist,  .hippo-picker-list-details .asset-gallery-plugin, .hippo-picker-list-details .hippo-list-search {
+  margin-top: 0px;
+}
 
 /* images */
 .hippo-list-details td.icon-48 {background: url("images/hippo-gallery-folder.png") no-repeat 4px center;}
@@ -512,7 +520,7 @@ background-image:url(images/box-grey2.png);}
 .hippo-picker-navigation{background: url("images/silver4.png") repeat-x; height: 20px; width: 635px; border-bottom: 1px solid #afafaf; margin-left: 194px; padding-top: 2px; padding-bottom: 2px; padding-left: 2px;}
 .hippo-picker-list-details tr.hippo-list-paging td div {margin-bottom: 2px; margin-top: 10px; width: 100%;}
 .hippo-picker-navigation-buttons{background: url("images/hippo-picker-navigation-back.png") repeat-x;}
-.hippo-window-form td div.hippo-picker-navigation-buttons input, .hippo-picker-navigation-buttons input{float: left; padding: 0px; height: 22px; width: 24px; font-size: 11px; background: url("images/hippo-picker-navigation-buttons-back.png") no-repeat; background-position: 0px -20px; border: none; margin: 0px; text-indent: -9999px;}
+.hippo-window-form td div.hippo-picker-navigation-buttons input, .hippo-picker-navigation-buttons input{float: left; padding: 0px; width: 24px; font-size: 11px; background: url("images/hippo-picker-navigation-buttons-back.png") no-repeat; background-position: 0px -20px; border: none; margin: 0px; text-indent: -9999px;}
 
 .hippo-window-form td div.hippo-picker-navigation-buttons input.up {background: url("images/hippo-picker-navigation-buttons-back.png") no-repeat; background-position: 0px -20px; }
 
@@ -548,7 +556,7 @@ color: #333333;
 /* Image Picker */
 .hippo-picker-properties label{float: left; margin-right: 5px; padding: 2px; line-height: 21px;}
 body .hippo-picker-properties div.text-input input{border: 1px solid #afafaf; padding: 4px; line-height: 16px; background: url("images/hippo-window-input-back.png") no-repeat;width: 535px}
-.hippo-picker-list-details table tr th{padding: 1px; padding-left: 4px; padding-bottom: 1px; border: 1px solid #afafaf; border-right: 0px; border-bottom: none;}
+/*.hippo-picker-list-details table tr th{padding: 1px; padding-left: 4px; padding-bottom: 1px; border: 1px solid #afafaf; border-right: 0px; border-bottom: none;}*/
 
 /* Referring documents */
 .hippo-referring-documents {margin: 5px; height: 365px;}
@@ -596,7 +604,8 @@ ents-small-folders h3{background: transparent url(images/filelistHeaderback.png)
  
 .hippo-browser-documents-small .hippo-browser-documents-small-files{border-left: 1px solid #afafaf; border-right: 1px solid #afafaf; background: white;}
 .hippo-browser-documents-small .hippo-browser-documents-small-folders{background: #f4f4f4; border-left: 1px solid #afafaf; border-bottom: 0px; border-top: 0px }
-/* this is nasty and temporary, YUI wireframe needs an update */.hippo-browser-documents-small .hippo-browser-documents-small-files .hippo-list-details{margin-top: 25px;}
+
+.hippo-browser-documents-small .hippo-browser-documents-small-files .hippo-list-details{clear:both;}
 
 .hippo-browser-documents-small .hippo-browser-documents-small-files {background: #ffffff url('images/document-list-back.png') repeat-x;}
 /* toolbar requires some tweaks here */
@@ -925,7 +934,8 @@ div.wicket-modal div.wicket-tree {border: 0px;}
 .hippo-editor .hippo-editor-field .add-16:hover{border: 1px solid #EDF5FF; background-color: white}
 .hippo-editor .hippo-editor-field .hippo-editor-field-subfield {margin-bottom: 4px; background: white; border: 1px solid #B2B2B2;}
 
-.hippo-editor .hippo-editor-field .hippo-editor-field-subfield {position: relative; padding-right: 5px;}
+.hippo-editor .hippo-editor-field .hippo-editor-field-subfield {position: relative;}
+.hippo-editor .template-type-wrapper .hippo-editor-field .hippo-editor-field-subfield  {padding-right: 5px;}
 
 .hippo-editor .hippo-editor-field-subfield.invalid .hippo-editor-field-subfield-item {border-color: #f00000;}
 
@@ -1288,6 +1298,7 @@ table.hippo-list-details > tbody {
 .navigator-center-body table.hippo-list-documents, .navigator-center-body table.hippo-gallery-images, .navigator-center-body table.hippo-gallery-assets,
 .hippo-dialog-picker table.hippo-list-documents, .hippo-dialog-picker table.hippo-gallery-images, .hippo-dialog-picker table.hippo-gallery-assets {
   border-collapse: inherit;
+  background-color: #fff;
 }
 
 table.hippo-currentactivity > tbody, table.hippo-todo > tbody {
@@ -1543,4 +1554,14 @@ div.hippo-diff-removed div.resource-values, div.hippo-diff-added div.resource-va
   padding: 2px 5px;
   text-align: right;
   width: 7em;
+}
+
+/* Toggle button class is used in multiple plugin, to avoid clashes define it here */
+.toggle-button {
+    float: right;
+    /*margin-bottom: 3px;*/
+    padding-top: 2px;
+    padding-right: 2px;
+    position: static;
+    padding-bottom: 3px;
 }
