--- a/repository/package/skin/src/main/webapp/screen_ie.css
+++ b/repository/package/skin/src/main/webapp/screen_ie.css
@@ -29,5 +29,3 @@ table.toolbarRow {
 .hippo-search-scope-container-ul li {
   width: 42%;
 }
-
-.hippo-browser-documents-small .hippo-browser-documents-small-files .hippo-list-details{margin-top: 0px;}
